<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Board Game Dice Roller</string>
    <string name="roll_dice">Roll dice!</string>
    <string name="choose_game">Games</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="title_shake_preference">Shake to roll</string>
    <string name="title_vibe_preference">Vibrate after roll</string>
    <string name="about_title">About the app</string>
    <string name="about_text">This is dice rolling application for board games. If you like the app, please support the development by making a donation.\n\n© 2012, Victor Kropp.</string>
    <string name="tap_to_roll">Tap dice to roll</string>
    <string name="tap_to_hold">Tap dice to hold</string>
    <string name="shake_or_tap_to_roll">Shake or tap dice to roll</string>
    <string name="rolldice_tab_name">Roll dice!</string>
    <string name="stats_tab_name">Stats</string>
    <string name="games_tab_name">Games</string>
    <string name="history_header">History</string>
    <string name="clearhistory">Clear history</string>
    <string name="stats_only_in_full_version">Statistics available only in full version</string>
    <string name="only_in_full_version">Only in Full version. Tap to upgrade!</string>
    <string name="smth_available_only_in_full_version">Statistics and some of the games available only in full version. Please, support development of this app by buying upgrade in Play Store.</string>
    <string name="upgrade_header">Upgrade to Full version</string>
    <string name="buy_full_version">Buy Full version!</string>

    <string name="_simple_dice">Simple dice</string>
    <string name="_d4">4</string>
    <string name="_d6">6</string>
    <string name="_d8">8</string>
    <string name="_d10">10</string>
    <string name="_d12">12</string>
    <string name="_d20">20</string>
    <string name="_1d6">1</string>
    <string name="_2d6">2</string>
    <string name="_3d6">3</string>
    <string name="_4d6">4</string>
    <string name="_5d6">5</string>
    <string name="_6d6">6</string>
    <string name="_7d6">7</string>
    <string name="_8d6">8</string>
    <string name="_fd_special">D</string>

    <string name="_backgammon">Backgammon</string>
    <string name="_monopoly">Monopoly</string>
    <string name="_munchkin">Munchkin</string>
    <string name="_catan">Settlers of Catan</string>
    <string name="_catan_cities_knights">Settlers of Catan: Cities &amp; Knights</string>
    <string name="_stone_age">Stone Age</string>
    <string name="_merchants_and_marauders">Merchants &amp; Marauders</string>
    <string name="_formulad">Formula D</string>
    <string name="_evolution">Evolution</string>
    <string name="_evolution_continents">Evolution: Continents</string>
    <string name="_yatzy">Dice Poker (Yatzy)</string>

    <string name="after_roll_preferences">After roll</string>
    <string name="title_keep_screen_on_preference">Keep screen on</string>
    <string name="summary_keep_screen_on_preference">Don\'t let your device sleep. Warning! Active screen consumes more battery!</string>
    <string name="title_notification_preference">Play sound after roll</string>
    <string name="silent">No sound</string>
    <string name="donate">Donate</string>
    <string name="app_url">http://victor.kropp.name/diceroller/</string>
    <string name="next_turn">Next turn</string>
    <string name="rethrow">Rethrow</string>
    <string name="show_summary_preference">Show summary</string>
</resources>
