<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="shake_preference"
            android:title="@string/title_shake_preference"
             />
    <CheckBoxPreference
            android:key="keep_screen_on_preference"
            android:title="@string/title_keep_screen_on_preference"
             />
    <PreferenceCategory android:title="@string/after_roll_preferences">
        <CheckBoxPreference
                android:key="vibe_preference"
                android:title="@string/title_vibe_preference"
                 />
        <RingtonePreference
                android:key="notification_preference"
                android:title="@string/title_notification_preference"
                android:ringtoneType="notification"
                android:showSilent="true"
                android:showDefault="true"
            />
    </PreferenceCategory>
</PreferenceScreen>