<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <TableLayout android:id="@+id/statslayout"
                 android:layout_weight="2"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center"
                 android:stretchColumns="*"
            >
        <TableRow>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/stats_only_in_full_version"/>
                <Button android:id="@+id/buy_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_full_version"
                        />
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:lines="1"
            android:text="@string/history_header"
            style="@android:style/TextAppearance.WindowTitle"
            android:background="@android:color/darker_gray"
            />
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
        <TextView android:id="@+id/historytext"
                  android:textSize="10pt"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                />
    </ScrollView>
</LinearLayout>